# implicit_probing

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
dev/: HANDOFF.md  RELEASE_CHECKLIST.md
docs/: composition.md  conf.py  fenics_hook.md  index.md  jax_hook.md  overview.md
docs/_templates/autosummary/: class.rst
docs/api/: index.rst
examples/: fenics_composition.py  fenics_poisson.py  jax_deq.py  jax_deq_input.py  toy_polynomial.py
implicit_probing/: __init__.py  composition.py  driver.py  fenics.py  jax.py  multiset.py  reference_problems.py  symbolic.py  validation.py
implicit_probing/backend/: __init__.py  composition.py  driver.py  multiset.py  symbolic.py
tests/: test_composition.py  test_driver.py  test_fenics.py  test_fenics_composition.py  test_jax.py  test_multiset.py  test_reference_problems.py  test_symbolic.py  test_validation.py
tests/backend/: test_composition.py  test_driver.py  test_multiset.py  test_symbolic.py
