[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit_probing"
version = "2026.0.0"
description = "Derivative probing of maps defined implicitly through a state equation (Algorithms 1 & 2 of the T4S paper)"
requires-python = ">=3.9"
# Minimal dependencies by design. The pure-Python symbolic engine needs none; numpy is for the
# numeric driver and the reference problem. The JAX hook is an optional extra ([jax] below); the
# FEniCS/DOLFINx hook needs dolfinx, which is not pip-installable (the user installs it separately).
dependencies = [
    "numpy>=1.21",
]
authors = [
  {name = "Nick Alger", email = "nalger225@gmail.com"},
  {name = "Blake Christierson", email = "bechristierson@utexas.edu"},
]
maintainers = [
  {name = "Nick Alger", email = "nalger225@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "derivatives", "adjoint method", "implicit function theorem",
  "PDE-constrained", "tensor probing", "Taylor series", "automatic differentiation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
jax = ["jax>=0.4"]
# Build the API + narrative documentation site (Sphinx, pydata theme, MyST for the narrative .md).
docs = ["sphinx", "pydata-sphinx-theme", "myst-parser"]

[project.urls]
Homepage = "https://github.com/NickAlger/implicit_probing"
Repository = "https://github.com/NickAlger/implicit_probing"
"Bug Tracker" = "https://github.com/NickAlger/implicit_probing/issues"

[tool.setuptools.packages.find]
include = ["implicit_probing*"]

# Ship the PEP 561 marker so downstream type-checkers honor the inline annotations (the public API is
# a typed Protocol). Verified to land in the wheel by the clean-env smoke test.
[tool.setuptools.package-data]
implicit_probing = ["py.typed"]
